--- a/nieruchomości/Views/Home/_ShowHouse.cshtml
+++ b/nieruchomości/Views/Home/_ShowHouse.cshtml
@@ -24,6 +24,25 @@
         {
             <div class="alert-danger"><strong>To ogłoszenie jest ukryte.</strong> Nie jest widoczne dla użytkowników</div>
         }
+        <div class="row" style="margin-bottom:10px">
+            <div class="col-md-6" style="text-align:left">
+                @if (!String.IsNullOrEmpty(Model.Previous))
+                {
+                    <a class="btn btn-xs btn-success" href="/Home/Show?key=@Model.Previous">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                }
+            </div>
+            <div class="col-md-6" style="text-align:right">
+                @if (!String.IsNullOrEmpty(Model.Next))
+                {
+                    <a class="btn btn-xs btn-success" href="/Home/Show?key=@Model.Next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
+                }
+
+            </div>
+        </div>
         <div class="pull-right" style="font-size: 12px; font-weight:100">Numer oferty: @Model.Number<br /><div class="pull-right" style="font-size: 12px; font-weight:100">Odwiedzin: <span class="badge">@(Model.Counter)</span></div></div>
         <h4>@Model.Title</h4>
         <h5>Dom</h5>
