--- a/nieruchomości/Views/Admin/Worker.cshtml
+++ b/nieruchomości/Views/Admin/Worker.cshtml
@@ -3,6 +3,7 @@
 
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
+        @Html.Partial("AdminMenu")
         <div class="custom-advert-panel-title">Informacje o pracowniku</div>
         <div class="custom-advert-panel-body">
             <div class="row">
