--- a/nieruchomości/Views/Admin/Messages.cshtml
+++ b/nieruchomości/Views/Admin/Messages.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Data.SqlTypes
 @using Microsoft.Ajax.Utilities
 @using PagedList.Mvc
-@model PagedList.PagedList<Models.EntityModels.Mail>
+@model PagedList.IPagedList<Models.EntityModels.Mail>
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @Html.Partial("AdminMenu")
