--- a/nieruchomości/Views/Admin/Offers.cshtml
+++ b/nieruchomości/Views/Admin/Offers.cshtml
@@ -3,7 +3,7 @@
 @using Models.ViewModels
 @using nieruchomości.Helpers
 @using PagedList.Mvc
-@model PagedList.PagedList<Models.EntityModels.Offer>
+@model PagedList.IPagedList<Models.EntityModels.Offer>
 
 
 
