--- a/nieruchomości/Views/Admin/_AddHouse.cshtml
+++ b/nieruchomości/Views/Admin/_AddHouse.cshtml
@@ -123,7 +123,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <small>Zdjęcia:</small>
-                        <input type="file" multiple class="form-control" id="Files" name="Files"/>
+                        <input type="file" multiple class="form-control" id="Files" name="Files" accept="image/*" />
                     </div>
                 </div>
                 <div class="row" style="color: rgb(74, 0, 0)">
