--- a/nieruchomości/Views/Shared/_Layout.cshtml
+++ b/nieruchomości/Views/Shared/_Layout.cshtml
@@ -1,157 +1,122 @@
 ﻿@using System.Web.Optimization
+<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Nieruchomości ;)</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css"/>
-    <link href="~/Content/ng-grid.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/ng-grid.css" rel="stylesheet" type="text/css"/>
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
-<meta name="description" content="The description of my page" />
+    <meta name="description" content="The description of my page"/>
 </head>
 <body>
-<div class="container body-content">
-    @if (!String.IsNullOrEmpty(HttpContext.Current.User.Identity.Name))
-    {
-        <div class="row">
-            <div class="col-md-12" style="background-color: rgb(255, 172, 172); margin-bottom: 10px">
-                <div class="col-md-6" style="text-align: left;">
-                    <small>zalogowano jako <strong>@HttpContext.Current.User.Identity.Name</strong></small>
-                </div>
-                <div class="col-md-6" style="text-align: right;">
-                    <a role="button" class="btn btn-xs btn-default" href="/Admin" style="margin-right:5px">Panel admina</a>
-                    <small><strong><a style="color:black" href="/Admin/Login">Wyloguj</a></strong></small>
-                </div>
-            </div>
-        </div>
-    }
-    <div class="row">
-        <div class="col-md-2 custom-left-menu">
-            <a href="/Home"><img src="~/Content/img/the-palace-of-culture.jpg" width="100%" /></a>
-        </div>
-        <div class="col-md-10">
-            <div class="col-md-6">
-                <div class="partner" style="font-style: italic; color: black; font-size: large; margin-bottom: 10px; border-bottom: 1px solid black; border-radius: 10px; padding-left: 25px; border-left: 1px solid black">
-                    Najlepszy partner w nieruchomościach
-                </div>
-            </div>
-            <div class="col-md-2">
-            </div>
-            <div class="col-md-4">
-                <div class="partner" style="font-style: italic; color: black; font-size: large; margin-bottom: 10px; border-bottom: 1px solid black; border-radius: 10px; padding-right: 25px; border-right: 1px solid black; text-align: right">
-                    tel. 784 665 112
-                </div>
-            </div>
-            <div class="row" style="margin-right: 15px">
-                <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
-                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="height: 190px">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators">
-                            <li data-target="#carousel-example-generic" data-slide-to="0" style="background-color: black" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1" style="background-color: black"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="2" style="background-color: black"></li>
-                        </ol>
-
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner" role="listbox">
-                            <div class="item active" style="padding: 10px">
-                                <h1>Lorem Ipsum</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non justo quis mi imperdiet ultrices. Morbi sed consectetur risus. Nulla faucibus et ipsum ac aliquet. Integer id facilisis risus, dictum pharetra arcu. In hac habitasse platea dictumst. Cras libero ex, sollicitudin eu semper eget, aliquet in justo. Aliquam vel nibh at est tempus efficitur. Sed urna tellus, scelerisque in felis non, semper tempus nulla. Vivamus porttitor risus non diam molestie mattis. Aliquam quis vestibulum mauris, quis feugiat eros. Nullam gravida, leo vel efficitur consequat, massa purus facilisis enim, vitae semper urna massa at mauris. Nullam ac ex nisl.</p>
+<div class="container">
+    <div class="col-md-12 body-content" style="padding-bottom: 20px;">
+        <div class="col-md-3">
+            <div class="row">
+                <div class="left-menu">
+                    <div class="menu-item">Strona główna</div>
+                    <div class="menu-item">O firmie</div>
+                    <div class="menu-item">Kredyty</div>
+                    <div class="menu-item">Oferty:</div>
+                    @{ Html.RenderAction("Cities", "Home"); }
+                    <div class="menu-item-searcher">
+                        <div class="menu-item">Wyszukaj ofertę:</div>
+                        <div class="row">
+                            <div class="col-md-7">
+                                <input class="form-control menu-item-input" placeholder="Numer oferty?"/>
                             </div>
-                            <div class="item" style="padding: 10px">
-                                <h1>Lorem Ipsum
-                                </h1>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non justo quis mi imperdiet ultrices. Morbi sed consectetur risus. Nulla faucibus et ipsum ac aliquet. Integer id facilisis risus, dictum pharetra arcu. In hac habitasse platea dictumst. Cras libero ex, sollicitudin eu semper eget, aliquet in justo. Aliquam vel nibh at est tempus efficitur. Sed urna tellus, scelerisque in felis non, semper tempus nulla. Vivamus porttitor risus non diam molestie mattis. Aliquam quis vestibulum mauris, quis feugiat eros. Nullam gravida, leo vel efficitur consequat, massa purus facilisis enim, vitae semper urna massa at mauris. Nullam ac ex nisl.
-                                </p>
-
-                            </div>
-                            <div class="item" style="padding: 10px">
-                                <h1>
-                                    Lorem Ipsum
-                                </h1>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non justo quis mi imperdiet ultrices. Morbi sed consectetur risus. Nulla faucibus et ipsum ac aliquet. Integer id facilisis risus, dictum pharetra arcu. In hac habitasse platea dictumst. Cras libero ex, sollicitudin eu semper eget, aliquet in justo. Aliquam vel nibh at est tempus efficitur. Sed urna tellus, scelerisque in felis non, semper tempus nulla. Vivamus porttitor risus non diam molestie mattis. Aliquam quis vestibulum mauris, quis feugiat eros. Nullam gravida, leo vel efficitur consequat, massa purus facilisis enim, vitae semper urna massa at mauris. Nullam ac ex nisl.
-                                </p>
-
+                            <div class="col-md-5" style="padding-left: 0px">
+                                <button class="menu-item-button">Znajdź</button>
                             </div>
                         </div>
-
-                        <!-- Controls -->
-                        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+                    </div>
+                    <div class="menu-item">Dodaj własną ofertę</div>
+                    <div class="menu-item">Skontaktuj się z nami</div>
+                    <div class="menu-item-contact">
+                        <div class="menu-item-contact-phone">
+                            <div class="row">
+                                <div class="col-md-2" style="text-align: center">
+                                    <span class="glyphicon glyphicon-phone-alt" style="font-size: 21px;"></span>
+                                </div>
+                                <div class="col-md-10">570 170 007</div>
+                            </div>
+                        </div>
+                        <div class="menu-item-contact-email">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <span class="glyphicon glyphicon-envelope" style="font-size: 21px;"></span>
+                                </div>
+                                <div class="col-md-9">biuro@nieruchomoscijg.pl</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu-item-social-media">
+                        <div class="row">
+                            <div class="col-md-7 pull-right">
+                                <div class="col-md-4"><span class="glyphicon glyphicon-thumbs-up"></span></div>
+                                <div class="col-md-4"><span class="glyphicon glyphicon-thumbs-up"></span></div>
+                                <div class="col-md-4"><span class="glyphicon glyphicon-thumbs-up"></span></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-    </div>
-    <div class="row">
-        <div class="col-md-2">
-            <div class="row">
-                <div class="col-md-12 custom-left-menu" style="padding: 0px">
-                    <ul class="nav nav-pills nav-stacked small">
-                        <li class="custom-list"><a href="/Home/Index">Strona główna</a></li>
-                        <li class="custom-list"><a href="/Home/About">O firmie</a></li>
-                        <li class="custom-list"><a href="/Home/Credits">Kredyty</a></li>
-                        @if (String.IsNullOrEmpty(HttpContext.Current.User.Identity.Name))
-                        {
-                            <li class="custom-list"><a href="/Home/Contact">Napisz czego szukasz</a></li>
-                        }
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 custom-left-menu">
-                    <small>Wprowadź numer oferty:</small><br/>
-                    @using (Html.BeginForm("Search", "Home"))
-                    {
-                        <div class="row">
-                            <div class="col-md-6" style="padding-right: 0px">
-                                <input class=" form-control input-sm" name="key" pattern="[0-9]+" oninvalid="setCustomValidity('Wprowadź numer oferty!')" oninput="setCustomValidity('')" type="text" />
-                            </div>
-                            <div class="col-md-6" style="padding-left: 10px">
-                                <button type="submit" class="btn btn-sm btn-default">Wyszukaj</button>
-                            </div>
-                        </div>
-                    }
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 custom-left-menu" style="padding: 0px">
-                    <a role="button" class="btn btn-sm btn-danger" style="width: 100%" href="/Home/CreateOffer">Dodaj bezpłatnie ofertę</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 custom-left-menu" style="padding: 0px">
-                    <a role="button" class="btn btn-sm btn-danger" style="width: 100%" href="/Home/Where">Gdzie jesteśmy</a>
+            <div class="row" style="margin-top:20px">
+                <div class="left-newest">
+                    <div class="left-newest-title">Ostatnio dodane:</div>
+                    @{Html.RenderAction("NewestAdverts", "Home");}
                 </div>
             </div>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-9">
             @RenderBody()
         </div>
-    </div>
-    <div class="row">
-        <div class="navbar navbar-default">
-        </div>
+
     </div>
 </div>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/bootstrap.min.js"></script>
-    <script language="javascript">
-        $('.dropdown-toggle').dropdown();
-        $(".carousel").carousel();
-        $('.carousel').bind('mousewheel', function (e) { $(this).carousel('next'); });
-    </script>
 </body>
 </html>
+<footer style="padding-top: 0; padding-bottom:0">
+    <div class="container" style="padding-top: 0; padding-bottom: 0; color: white;">
+        <div class="col-md-12" style="background-color: #333333; padding-top: 20px; padding-bottom:20px">
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-12">
+                        <b>NIERUCHOMOŚCI JELENIOGÓRSKIE</b>
+                    </div>
+                </div>
+                <div class="row" style="margin-top:10px">
+                    <div class="col-md-12">
+                        <small>Jelenia Góra ul. Wolności 123</small><br/>
+                        <small>tel. 570 170 007</small>
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 10px">
+                    <div class="col-md-12">
+                        <small>e-mail: biurp@nieruchomoscijg.pl</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-12">
+                        <b>Skup, sprzedaż, wynajem nieruchomości</b>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12" style="margin-top: 10px;">
+                        <small>Jelenia Góra, Cieplice, Karpacz, Szklarska Poręba, Świeradów, Maciejowa, Piechowice, Podgórzyn, Przesieka, Sosnówka, Michałowice, Jeżów, Płoszczyna, Dziwiszów, Siedlęcin</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                Social - Media: todo
+            </div>
+        </div>
+    </div>
+</footer>
+<link rel="stylesheet" type="text/css" href="/Content/CSS/Site.css"/>
