--- a/nieruchomości/Views/Home/Index.cshtml
+++ b/nieruchomości/Views/Home/Index.cshtml
@@ -225,10 +225,20 @@
                                     Okazja? przekaż dalej!
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-3" style="text-align: center"><span class="glyphicon glyphicon-star"></span></div>
-                                    <div class="col-md-3" style="text-align: center"><span class="glyphicon glyphicon-star"></span></div>
-                                    <div class="col-md-3" style="text-align: center"><span class="glyphicon glyphicon-star"></span></div>
-                                    <div class="col-md-3" style="text-align: center"><span class="glyphicon glyphicon-star"></span></div>
+                                    <div class="col-md-12">
+                                    <div class="col-md-3" style="padding:0">
+                                        <img src="/Content/img/icons/social-31-facebook.png"/>
+                                    </div>
+                                        <div class="col-md-3" style="padding:0">
+                                            <img src="/Content/img/icons/social-32-twitter.png" />
+                                        </div>
+                                        <div class="col-md-3" style="padding:0">
+                                            <img src="/Content/img/icons/social-3-google-plus.png" />
+                                        </div>
+                                        <div class="col-md-3" style="padding:0">
+                                            <img src="/Content/img/icons/social-40-e-mail.png" />
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-9">
