--- a/nieruchomości/Views/Shared/_Layout.cshtml
+++ b/nieruchomości/Views/Shared/_Layout.cshtml
@@ -56,10 +56,10 @@
                     </div>
                     <div class="menu-item-social-media">
                         <div class="row">
-                            <div class="col-md-7 pull-right">
-                                <div class="col-md-4"><span class="glyphicon glyphicon-thumbs-up"></span></div>
-                                <div class="col-md-4"><span class="glyphicon glyphicon-thumbs-up"></span></div>
-                                <div class="col-md-4"><span class="glyphicon glyphicon-thumbs-up"></span></div>
+                            <div class="col-md-6 pull-right">
+                                <div class="col-md-4"><img src="/Content/img/icons/social-32-twitter.png" /></div>
+                                <div class="col-md-4"><img src="/Content/img/icons/social-3-google-plus.png" /></div>
+                                <div class="col-md-4"><img src="/Content/img/icons/social-31-facebook.png" /></div>
                             </div>
                         </div>
                     </div>
